feat(line): 整合 LINE 廣播通知與火災警報
本次更新主要整合了 LINE Messaging API，實現了當車輛偵測到高溫時，能主動發送廣播通知給所有使用者和群組的功能。

- 新增 `/line-webhook` 端點，用於接收與驗證 LINE 平台的請求。
- 新增 `/broadcast` 端點，允許外部 (如 GUI) 觸發廣播訊息。
- 實作群組 ID 學習機制：當機器人被加入群組並收到訊息時，會自動記錄該群組 ID。
- 建立 `group_ids.txt` 檔案，將學習到的群組 ID 永久儲存，避免伺服器重啟後遺失。
- 伺服器啟動時會自動從 `group_ids.txt` 載入已知的群組。
- 移除機器人收到訊息時的自動回覆行為，使其在群組中保持安靜。

- 在 GUI 的 `fetchData` 函式中加入狀態監控邏輯。
- 當 `thermalDanger` 旗標狀態改變時 (危險 <-> 安全)，會自動呼叫後端的 `/broadcast` API，發送對應的警報或解除通知。

- 新增 `line_setting.py` 檔案，方便使用者管理 LINE Channel Secret 和 Access Token。
- 新增 `test_broadcast.py` 腳本，用於手動測試廣播功能。
- 將 `line-bot-sdk` 加入 `requirements.txt`。

- 修改 UDP 廣播的除錯邏輯，一旦成功獲取後端伺服器 IP，即停止列印相關的除錯訊息，保持序列埠監控器乾淨。

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,6 @@ esp32-camera-repo/
 check_imports.py
 test_reports/
 commit_message.txt
+# Files generated during runtime
+group_ids.txt
+temp_commit_message.txt
